# actix_test_app

./: Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
